# image_upload

./: .gitignore  CHANGELOG.md  README.md  data.db  main.py  pyproject.toml
app/: database.py  logger.py  main.py  models.py  security.py
app/routes/: images.py  sessions.py
app/static/: app.js  index.html  style.css
